Make canonical model processor usable on the modulepath
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>